deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hw-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hw-app
    template:
       metadata:
          labels:
             app: hw-app
       spec:
          containers:
          - name: home-work
            image: asmodeirus/arch_home_work:v1
            ports:
              - name: web 
                containerPort: 80
