ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hw-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: hw-service
              servicePort: 8000
            path: /
          - backend:
              serviceName: hw-service
              servicePort: 8000
            path: /otusapp/mike/*
